the testing is running

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="day">Sat</div>
         </div>
         <div class="days">
-          <!-- lets add days using js -->
+          <!-- let's add days using js -->
         </div>
       </div>
     </div>
